<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialogEventPoster"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/dialogEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Event Name"
            android:fontFamily="@font/bold1"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/dialogEventOrganizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Organizer"
            android:fontFamily="@font/light"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/dialogEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12/12/2024"
            android:fontFamily="@font/light"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/dialogEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20:00 - 22:00"
            android:fontFamily="@font/light"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/dialogEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:fontFamily="@font/light"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/dialogEventCloseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Close"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:elevation="2dp"
                android:layout_marginEnd="8dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/dialogEventDeleteButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:elevation="2dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogEventSignButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="Sign Up"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
