<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AttendeePageActivity">

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/hamburger_button"
        android:contentDescription="@string/menu"
        android:padding="5dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="142dp"
        android:layout_toStartOf="@id/menuButton"
        android:fontFamily="@font/bold1"
        android:padding="10dp"
        android:text="Welcome, "
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:orientation="vertical"
        android:padding="18dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/attendeeAllEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="All"
                    android:textColor="@color/red"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/attendeeOngoingEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ongoing"
                    android:textColor="@color/red"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/attendeeUpcomingEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upcoming"
                    android:textColor="@color/red"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/attendeeCompletedEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Completed"
                    android:textColor="@color/red"/>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:text="My Events"
            android:textSize="28sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/noMyEventsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="None"
            android:fontFamily="@font/bold1"
            android:visibility="gone"
            android:textSize="22sp"
            android:padding="25dp"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendeeEventsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:text="All Events"
            android:textSize="28sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/noAllEventsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="None"
            android:fontFamily="@font/bold1"
            android:visibility="gone"
            android:textSize="22sp"
            android:padding="25dp"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allEventsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Announcement"
            android:fontFamily="@font/bold1"
            android:textSize="28sp"
            android:padding="8dp"
            android:gravity="left"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/announcementList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/noAnnouncementsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="None"
            android:fontFamily="@font/bold1"
            android:textSize="22sp"
            android:padding="15dp"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Check into event"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/promoQrCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="promo QR-code"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

</RelativeLayout>
