...
    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Event"
        android:fontFamily="@font/bold1"
        app:layout_constraintBottom_toTopOf="@+id/joinEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <Button
        android:id="@+id/joinEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold1"
        android:text="Join Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
...
